# mcMax-studious-enigma

./: Assets.car.txt  LICENSE.txt  README.md
Project_381/: pluggin.rtf
Project_382/: #🔭.textClipping  (+3 more)
Project_382/yourproject-1.0/: Makefile  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
Project_382/yourproject-1.0/:github:workflows/gecco/NN_webhook/1️⃣/: jekyll-gh-pages_gecko.yml
Project_382/yourproject-1.0/:github:workflows/gecco/client-archive-sample.db/: gecco-client.pyx.py  mathLog-parser.md  starter-pg.md  token.py
Project_382/yourproject-1.0/sample.DB/: PKG-INFO
Project_382/yourproject-1.0/scripts/: jupyter_pipe_helper.sh
Project_382/yourproject-1.0/src/tests/: test_add.py
Project_382/yourproject-1.0/yourproject.egg-info/: LICENCE.md
Project_382/yourproject-1.0/yourproject.egg-info/Project_380:70defb1b-0030-4e94-b5a7-7c006cfcfb08/00-terrarium.pyx/: LICENCE.md  __keymap__.ini  terra-parser.pyx.py  terrarium.config.yml
Project_382/yourproject-1.0/yourproject.egg-info/Project_380:70defb1b-0030-4e94-b5a7-7c006cfcfb08/00-terrarium.pyx/AST-config/: config-parse.py  setup.py  token.py
Project_382/yourproject-1.0/yourproject.egg-info/Project_380:70defb1b-0030-4e94-b5a7-7c006cfcfb08/01-terrarium.pyx/: LICENCE.md  __keymap__.ini  terrarium.config.yml  terrarium.pyx.py
Project_382/yourproject-1.0/yourproject.egg-info/Project_380:70defb1b-0030-4e94-b5a7-7c006cfcfb08/01-terrarium.pyx/AST-config/: frame-feat.py  token.py
Project_382/yourproject-1.0/yourproject.egg-info/Project_380:70defb1b-0030-4e94-b5a7-7c006cfcfb08/BOARD/: start-script.txt
(+36 files in other folders)
